--- a/React-Practice/stopwatch-timer/src/App.css
+++ b/React-Practice/stopwatch-timer/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -7,14 +8,9 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #f5b976;
+  background-image: url('retro-sun.jpg');
   min-height: 100vh;
   display: flex;
   flex-direction: column;
