--- a/React-Practice/stopwatch-timer/src/control-buttons/control-buttons.css
+++ b/React-Practice/stopwatch-timer/src/control-buttons/control-buttons.css
@@ -10,23 +10,34 @@
 .btn-grp {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
  
 .btn {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 18vw;
-    height: 10vh;
+    font-family: Gill Sans, sans-serif;
+    width: 15vw;
+    height: 13vh;
     border-radius: 14px;
     margin: 6px 6px;
     display: flex;
-    border: 2px solid #e42a2a;
+    border: 8px solid #f8f6f6;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     color: #f5f5f5;
+    border-radius: 50%;
+    border-style: double;
+    outline: black; 
+    outline-offset: -20px;
 }
  
 .btn-one {
-    background-color: #e42a2a;
+    background-color: #4fe8ed;
+}
+
+.border {
+    width: 15vw;
+    height: 13vh;
+    border-radius: 100%;
+    border: 1px solid #f08833;
 }
