--- a/React-Practice/stopwatch-timer/src/timer/timer.css
+++ b/React-Practice/stopwatch-timer/src/timer/timer.css
@@ -2,7 +2,7 @@
     margin: 3rem 0;
     width: 100%;
     display: flex;
-    height: 12%;
+    height: 100%;
     justify-content: center;
     align-items: center;
 }
@@ -14,5 +14,5 @@
 }
  
 .mili-sec {
-    color: #e42a2a;
+    color: #f5f2f2;
 }
